# CodeChallenge

./: CMakeLists.txt  README.md
src/: Account.cpp  Account.h  CMakeLists.txt  Favors.cpp.back  Favors.h.back  main.cpp
test/: CMakeLists.txt  account-test.cpp
